[package]
name = "agin-link-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-valid = "0.24.0"
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
config = "0.15.22"
dashmap = "6.1.0"
dotenvy = "0.15.7"
entity = { version = "0.1.0", path = "../entity", features = ["utoipa"] }
fred = { version = "10.1.0", features = [
    "partial-tracing",
    "serde-json",
    "replicas",
    "enable-rustls-ring",
    "subscriber-client",
] }
futures = "0.3.32"
http = "1.4.0"
http-serde-ext = "1.0.2"
miette = "7.6.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = [
    "http2",
    "charset",
], default-features = false }
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
sea-orm = { version = "2.0.0-rc.18", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "with-uuid",
    "schema-sync",
    "entity-registry",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.1.0"
tower = { version = "0.5.3", features = ["full", "tokio", "log"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
visible = "0.0.1"
